fixed height and width of profile splash page and alignment of buttons

--- a/yb_profile/static/css/yb_profile/yb_profile.css
+++ b/yb_profile/static/css/yb_profile/yb_profile.css
@@ -181,6 +181,7 @@ Profile Page
     -webkit-backdrop-filter: blur(20px) brightness(50%);
     height: 100vh;
     width: 100vw;
+    top: 0px;
 }
 
 .splash-page.end {
